# bob.ip.binseg

./: .flake8  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .isort.cfg  .pre-commit-config.yaml  MANIFEST.in  README.md  README.rst  buildout.cfg  develop.cfg  pyproject.toml  requirements.txt  setup.py  version.txt
.reuse/: dep5
.reuse/templates/: deepdraw_header.jinja2
bob/ip/binseg/: __init__.py
bob/ip/binseg/data/: __init__.py  binsegdataset.py  csvdataset.py  dataset.py  folderdataset.py  imagefolder.py  imagefolderinference.py  jsondataset.py  loader.py  sample.py  transforms.py  transforms_new.py  utils.py
bob/ip/binseg/engine/: adabound.py  detection_evaluator.py  detection_predictor.py  detection_trainer.py  evaluator.py  inference.py  inferencer.py  predicter.py  predictor.py  significance.py  ssltrainer.py  train.py  trainer.py  valtrainer.py
bob/ip/binseg/modeling/: driu.py  driubn.py  driuod.py  driupix.py  hed.py  losses.py  m2u.py  make_layers.py  resunet.py  unet.py
bob/ip/binseg/models/: driu.py  driu_bn.py  driu_od.py  driu_pix.py  fasterrcnn.py  hed.py  losses.py  lwnet.py  m2unet.py  make_layers.py  normalizer.py  resunet.py  unet.py
bob/ip/binseg/script/: analyze.py  binseg.py  compare.py  config.py  csv_analyser.py  dataset.py  detection_train.py  evaluate.py  experiment.py  mkmask.py  predict.py  significance.py  train.py  train_analysis.py  train_detection.py
bob/ip/binseg/test/: __init__.py  conftest.py  test_basemetrics.py  test_batchmeasures.py  test_batchmetrics.py  test_chasedb1.py  test_checkpointer.py  test_cli.py  test_config.py  test_csv.py  test_cxr8.py  test_dataset.py  test_drhagis.py  test_drhagis.py.save  test_drionsdb.py  test_drishtigs1.py  test_drive.py  test_hrf.py  test_iostar.py  test_jsrt.py  test_mc.py  test_measures.py  test_models.py  test_montgomery.py  test_refuge.py  test_rimoner3.py  test_shenzhen.py  test_significance.py  test_stare.py  test_summary.py  test_transforms.py  utils.py
bob/ip/binseg/utils/: checkpointer.py  click.py  evaluate.py  measure.py  metric.py  model_serialization.py  model_zoo.py  pdfcreator.py  plot.py  resources.py  rsttable.py  summary.py  table.py  transformfolder.py
bob/ip/common/data/: loader.py  sample.py  utils.py
bob/ip/common/script/: analyze.py  common.py  compare.py  evaluate.py  experiment.py  mkmask.py  predict.py  significance.py  train.py  train_analysis.py
bob/ip/common/test/: __init__.py  conftest.py  test_chasedb1.py  test_checkpointer.py  test_cli.py  test_config.py  test_cxr8.py  test_drhagis.py  test_drionsdb.py  test_drishtigs1.py  test_drive.py  test_hrf.py  test_iostar.py  test_jsrt.py  test_measures.py  test_models.py  test_montgomery.py  test_refuge.py  test_rimoner3.py  test_shenzhen.py  test_significance.py  test_stare.py  test_summary.py
bob/ip/common/utils/: measure.py  resources.py  summary.py  table.py
bob/ip/detect/data/: loader.py  transforms.py  utils.py
bob/ip/detect/engine/: adabound.py  detection_trainer.py  evaluator.py  predictor.py  significance.py  trainer.py
bob/ip/detect/models/: driu_bn.py  faster_rcnn.py  hed.py  losses.py  lwnet.py  m2unet.py  normalizer.py
bob/ip/detect/script/: analyze.py  compare.py  config.py  dataset.py  evaluate.py  experiment.py  mkmask.py  predict.py  significance.py  train.py  train_analysis.py
bob/ip/detect/test/: __init__.py  test_checkpointer.py  test_cli.py  test_dataset.py  test_drhagis.py  test_drionsdb.py  test_drishtigs1.py  test_drive.py  test_iostar.py  test_jsrt.py  test_measures.py  test_models.py  test_refuge.py  test_rimoner3.py  test_significance.py  test_summary.py  test_transforms.py  utils.py
bob/ip/detect/utils/: measure.py  plot.py  table.py
bob/ip/detection/engine/: trainer.py
bob/ip/detection/script/: detect.py  train.py  train_analysis.py
conda/: meta.yaml
doc/: acknowledgements.rst  api.rst  baselines.rst  benchmarkresults.rst  catalog.json  cli.rst  conf.py  config.rst  configs.rst  contribute.rst  covd.rst  covdresults.rst  datasets.rst  evaluation.rst  experiment.rst  extras.inv  extras.txt  framework.dot  index.rst  install.rst  links.rst  models.rst  nitpick-exceptions.txt  plotting.rst  references.rst  results.rst  setup.rst  training.rst  usage.rst  visualization.rst
doc/_static/: style.css
doc/_templates/: config.rst  layout.html
doc/img/: bob-favicon.ico.license
doc/results/: index.rst
doc/results/baselines/: index.rst  lung.rst  od_oc.rst  vessel.rst
doc/results/cod/: index.rst  vessel.rst
doc/results/covd/: index.rst
doc/results/old/: index.rst
doc/results/xtest/: index.rst
doc/results/xtest/cup/: hed.rst  m2unet.rst  unet.rst
doc/results/xtest/disc/: hed.rst  m2unet.rst  unet.rst
doc/results/xtest/lung/: lwnet.rst  m2unet.rst  unet.rst
doc/results/xtest/vessel/: driu.rst  m2unet.rst  unet.rst
doc/scripts/: baselines.sh  functions.sh  mtest.sh  xtest.sh
doc/usage/: evaluation.rst  experiment.rst  index.rst  training.rst
src/deepdraw/binseg/data/: sample.py  utils.py
src/deepdraw/binseg/engine/: adabound.py  evaluator.py  predictor.py  significance.py  (+1 more)
src/deepdraw/data/: dataset.py  loader.py  sample.py  transforms.py  utils.py
src/deepdraw/engine/: callbacks.py  predictor.py  trainer.py
src/deepdraw/models/: driu_od.py  lwnet.py  resunet.py  unet.py
src/deepdraw/script/: analyze.py  common.py  compare.py  config.py  dataset.py  evaluate.py  experiment.py  mkmask.py  predict.py  significance.py  train.py  train_analysis.py
src/deepdraw/utils/: __init__.py  accelerator.py  checkpointer.py  resources.py  table.py
tests/: __init__.py  conftest.py  test_chasedb1.py  test_checkpointer.py  test_cli.py  test_config.py  test_cxr8.py  test_dataset.py  test_deepdraw.py  test_drhagis.py  test_drionsdb.py  test_drishtigs1.py  test_drive.py  test_hrf.py  test_iostar.py  test_jsrt.py  test_measures.py  test_models.py  test_montgomery.py  test_refuge.py  test_rimoner3.py  test_shenzhen.py  test_significance.py  test_stare.py  test_summary.py  test_transforms.py  utils.py
tests/data/: iris-train.csv  iris.json
(+849 files in other folders)
